<package>
  <name>urdf_test</name>
  <version>0.0.1</version>

  <description>This package contains a number of URDF test.</description>
  <author email="anfrage@fambach.net">Stefan Fambach</author>

  <maintainer email="anfrage@fambach.net">Stefan Fambach</maintainer>

  <license>BSD</license>
  <url>http://www.fambach.net</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
